--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MYSQL_PASSWORD: video_password
       TZ: 'UTC'
     ports:
-      - "3306:3306"
+      - "5506:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -31,10 +31,11 @@ services:
       dockerfile: Dockerfile
     container_name: video-showcase-frontend
     ports:
-      - "3000:3000"
+      - "3003:3000"
     environment:
       - NODE_ENV=production
       - VITE_API_URL=http://localhost:8080/api
+      - VITE_FRONTEND_PORT=3003
     depends_on:
       mysql:
         condition: service_healthy
