--- a/nginx.conf
+++ b/nginx.conf
@@ -51,8 +51,8 @@ http {
         # return 301 https://$server_name$request_uri;
 
         # 前端应用
-        location / {
-            proxy_pass http://frontend;
+    location / {
+        proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
