Checkpoint: 修复 Dockerfile 中的依赖安装问题，使用 serve 提供静态文件服务，确保前端容器正常启动。更新 docker-compose.yml 中的 API 地址为容器内网络地址。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,11 +34,7 @@ services:
       - "3003:3000"
     environment:
       - NODE_ENV=production
-      - VITE_API_URL=http://localhost:8080/api
-      - VITE_FRONTEND_PORT=3003
-    depends_on:
-      mysql:
-        condition: service_healthy
+      - VITE_API_URL=http://backend:8080/api
     networks:
       - video-showcase-network
     restart: unless-stopped
