--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,13 +39,12 @@ services:
       - video-showcase-network
     restart: unless-stopped
 
-  # 后端应用（可选，如果需要）
+  # 后端应用
   backend:
-    image: openjdk:17-slim
-    container_name: video-showcase-backend
     build:
       context: ../video-showcase-backend
       dockerfile: Dockerfile
+    container_name: video-showcase-backend
     ports:
       - "8080:8080"
     environment:
@@ -56,23 +55,6 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    networks:
-      - video-showcase-network
-    restart: unless-stopped
-
-  # Nginx 反向代理（可选）
-  nginx:
-    image: nginx:alpine
-    container_name: video-showcase-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    depends_on:
-      - frontend
-      - backend
     networks:
       - video-showcase-network
     restart: unless-stopped
