--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       MYSQL_USER: video_user
       MYSQL_PASSWORD: video_password
       TZ: 'UTC'
+      MYSQL_INITDB_SKIP_TZINFO: 'yes'
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --default-character-set=utf8mb4
     ports:
       - "5506:3306"
     volumes:
@@ -48,7 +50,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/video_showcase?useSSL=false&serverTimezone=UTC
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/video_showcase?useSSL=false&serverTimezone=UTC&characterEncoding=utf8mb4&useUnicode=true
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root_password
       - JWT_SECRET=your-secret-key-change-this-in-production-environment-with-at-least-256-bits
