--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,13 @@ services:
       MYSQL_PASSWORD: video_password
       TZ: 'UTC'
       MYSQL_INITDB_SKIP_TZINFO: 'yes'
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --default-character-set=utf8mb4
+    command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
       - "5506:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./my.cnf:/etc/mysql/conf.d/my.cnf:ro
     networks:
       - video-showcase-network
     healthcheck:
@@ -50,7 +51,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/video_showcase?useSSL=false&serverTimezone=UTC&characterEncoding=utf8mb4&useUnicode=true
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/video_showcase?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&characterEncoding=utf8mb4&useUnicode=true
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root_password
       - JWT_SECRET=your-secret-key-change-this-in-production-environment-with-at-least-256-bits
